# pypecdp

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  publish-to-pypi.yml
docs/: Makefile  api.rst  conf.py  customization.rst  examples.rst  index.rst
example/: click_and_navigate.py  console_logger.py  cookie_example.py  custom_events.py  customize_pypecdp.py  dom_selection.py  form_interaction.py  multi_tab.py  network_intercept.py  pdf_generation.py  quickstart.py  screenshot.py
src/pypecdp/: __init__.py  browser.py  cdp_pipe.py  config.py  elem.py  logger.py  tab.py  util.py
src/pypecdp/cdp/: __init__.py  audits.py  browser.py  css.py  dom.py  emulation.py  network.py  page.py  preload.py  storage.py  target.py
tests/: README.md  __init__.py  conftest.py  test_browser.py  test_config.py  test_elem.py  test_tab.py  test_util.py
