[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pypecdp"
version = "0.5.0"
description = "Async Chrome DevTools Protocol over POSIX pipes."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT License" }
authors = [
  { name = "sohaib17" }
]
homepage = "https://github.com/sohaib17/pypecdp"
keywords = ["cdp", "chromium", "chrome", "devtools", "asyncio", "automation", "headless"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "deprecated>=1.2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.5.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sohaib17/pypecdp"
Source = "https://github.com/sohaib17/pypecdp"
Issues = "https://github.com/sohaib17/pypecdp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pypecdp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--cov=pypecdp",
  "--cov-report=term-missing",
  "--cov-report=html",
]
markers = [
  "asyncio: mark test as async",
]

[tool.coverage.run]
source = ["pypecdp"]
omit = [
  "*/pypecdp/cdp/*",
  "*/tests/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.isort]
profile = "black"
skip_glob = ["src/pypecdp/cdp/*"]

[tool.black]
line-length = 79
exclude = "src/pypecdp/cdp/"

[tool.mypy]
python_version = "3.12"
strict = true
follow_imports = "silent"
show_column_numbers = true
exclude = ["src/pypecdp/cdp/", "tests/"]
disable_error_code = ["attr-defined", "import-untyped"]
